--- a/ruff.toml
+++ b/ruff.toml
@@ -1,4 +1,4 @@
-tab-size = 2
+indent-width = 2
 
 select = [
   "F",
@@ -28,14 +28,3 @@ exclude = [
   "openpilot/",
 ]
 
-[per-file-ignores]
-"test/*" = [
-  "F401",
-  "F403",
-  "F405",
-  "F541",
-  "E722",
-  "E731",
-  "F821",
-  "F841",
-]
