--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -217,11 +217,10 @@ jobs:
         name: Test Beam Search
         run: PYTHONPATH="." GPU=1 IGNORE_BEAM_CACHE=1 python3 -m pytest extra/optimization/test_beam_search.py
 
-  testmetalwebgpu:
-    name: Metal and WebGPU Tests
+  testwebgpu:
+    name: WebGPU Tests
     runs-on: macos-13
     timeout-minutes: 20
-
     steps:
     - name: Checkout Code
       uses: actions/checkout@v3
@@ -233,28 +232,14 @@ jobs:
       uses: actions/cache@v3
       with:
         path: ${{ env.Python3_ROOT_DIR }}/lib/python3.11/site-packages
-        key: metal-webgpu-testing-packages-${{ hashFiles('**/setup.py') }}
+        key: webgpu-testing-packages-${{ hashFiles('**/setup.py') }}
     - name: Install Dependencies
       run: pip install -e '.[webgpu,testing]' --extra-index-url https://download.pytorch.org/whl/cpu
     - name: Cache downloads
       uses: actions/cache@v3
       with:
         path: ~/Library/Caches/tinygrad/downloads/
-        key: downloads-cache-metal-${{ env.DOWNLOAD_CACHE_VERSION }}
-    - name: Test LLaMA compile speed
-      run: PYTHONPATH="." METAL=1 python test/external/external_test_speed_llama.py
-    - name: Check Device.DEFAULT (METAL) and print some source
-      run: |
-        METAL=1 python -c "from tinygrad import Device; assert Device.DEFAULT == 'METAL', Device.DEFAULT"
-        METAL=1 DEBUG=4 FORWARD_ONLY=1 python3 test/test_ops.py TestOps.test_add
-    - name: Run metal test
-      run: METAL=1 python -m pytest -n=auto test/ --ignore=test/external --ignore=test/models --durations=20
-    - name: Run ONNX
-      run: METAL=1 python -m pytest -n=auto test/external/external_test_onnx_backend.py
-    - name: Run whisper test
-      run: METAL=1 python -m pytest test/models/test_whisper.py
-    - name: Test tensor core reshape-only ops
-      run: METAL=1 TC=2 python -m pytest -n=auto test/test_ops.py
+        key: downloads-cache-webgpu-${{ env.DOWNLOAD_CACHE_VERSION }}
     - name: Check Device.DEFAULT (WEBGPU) and print some source
       run: |
         WEBGPU=1 python -c "from tinygrad import Device; assert Device.DEFAULT == 'WEBGPU', Device.DEFAULT"
@@ -269,6 +254,45 @@ jobs:
       run: npm install puppeteer
     - name: Run WEBGPU Efficientnet
       run: node test/test_webgpu.js
+
+  testmetalwebgpu:
+    name: Metal Tests
+    runs-on: macos-13
+    timeout-minutes: 20
+
+    steps:
+    - name: Checkout Code
+      uses: actions/checkout@v3
+    - name: Set up Python 3.11
+      uses: actions/setup-python@v4
+      with:
+        python-version: 3.11
+    - name: Cache python packages
+      uses: actions/cache@v3
+      with:
+        path: ${{ env.Python3_ROOT_DIR }}/lib/python3.11/site-packages
+        key: metal-testing-packages-${{ hashFiles('**/setup.py') }}
+    - name: Install Dependencies
+      run: pip install -e '.[testing]' --extra-index-url https://download.pytorch.org/whl/cpu
+    - name: Cache downloads
+      uses: actions/cache@v3
+      with:
+        path: ~/Library/Caches/tinygrad/downloads/
+        key: downloads-cache-metal-only-${{ env.DOWNLOAD_CACHE_VERSION }}
+    - name: Test LLaMA compile speed
+      run: PYTHONPATH="." METAL=1 python test/external/external_test_speed_llama.py
+    - name: Check Device.DEFAULT (METAL) and print some source
+      run: |
+        METAL=1 python -c "from tinygrad import Device; assert Device.DEFAULT == 'METAL', Device.DEFAULT"
+        METAL=1 DEBUG=4 FORWARD_ONLY=1 python3 test/test_ops.py TestOps.test_add
+    - name: Run metal test
+      run: METAL=1 python -m pytest -n=auto test/ --ignore=test/external --ignore=test/models --durations=20
+    - name: Run ONNX
+      run: METAL=1 python -m pytest -n=auto test/external/external_test_onnx_backend.py
+    - name: Run whisper test
+      run: METAL=1 python -m pytest test/models/test_whisper.py
+    - name: Test tensor core reshape-only ops
+      run: METAL=1 TC=2 python -m pytest -n=auto test/test_ops.py
 
   testhipcompilation:
     name: HIP Compilation Tests
