--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -15,7 +15,7 @@ repos:
         pass_filenames: false
       - id: ruff
         name: ruff
-        entry: ruff .
+        entry: ruff . --preview
         language: system
         always_run: true
         pass_filenames: false
