--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -21,7 +21,15 @@ repos:
         pass_filenames: false
       - id: docs
         name: docs
-        entry: python3 docs/abstractions.py
+        entry: |
+          python3 docs/abstractions.py
+          python3 docs/beautiful.py
+        language: system
+        always_run: true
+        pass_filenames: false
+      - id: devicetests
+        name: select GPU tests
+        entry: env GPU=1 PYTHONPATH="." pytest test/test_uops.py test/test_custom_function.py
         language: system
         always_run: true
         pass_filenames: false
