--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -21,6 +21,7 @@ jobs:
       uses: actions/checkout@v3
     - name: Symlink models and datasets
       run: |
+        mkdir -p ~/tinygrad/weights/
         ln -s ~/tinygrad/disassemblers/applegpu disassemblers/applegpu
         ln -s ~/tinygrad/weights/sd-v1-4.ckpt weights/sd-v1-4.ckpt
         ln -s ~/tinygrad/weights/bpe_simple_vocab_16e6.txt.gz weights/bpe_simple_vocab_16e6.txt.gz
@@ -112,6 +113,7 @@ jobs:
       run: /opt/rocm/bin/rocm-bandwidth-test
     - name: Symlink models and datasets
       run: |
+        mkdir -p ~/tinygrad/weights/
         ln -s ~/tinygrad/weights/bpe_simple_vocab_16e6.txt.gz weights/bpe_simple_vocab_16e6.txt.gz
         ln -s ~/tinygrad/weights/LLaMA weights/LLaMA
         ln -s ~/tinygrad/extra/datasets/cifar-10-python.tar.gz extra/datasets/cifar-10-python.tar.gz
