--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -21,9 +21,7 @@ repos:
         pass_filenames: false
       - id: docs
         name: docs
-        entry: |
-          python3 docs/abstractions.py
-          python3 docs/abstractions2.py
+        entry: python3 docs/abstractions.py && python3 docs/abstractions2.py
         language: system
         always_run: true
         pass_filenames: false
